--- a/backend/package.json
+++ b/backend/package.json
@@ -22,7 +22,9 @@
     "cors": "^2.8.5",
     "dotenv": "^16.3.1",
     "express": "^4.18.2",
-    "soap": "^1.0.0",
+    "mqtt": "^5.11.0",
+    "soap": "^1.1.10",
+    "socket.io": "^4.8.1",
     "xml2js": "^0.6.2"
   },
   "devDependencies": {
