--- a/backend/package.json
+++ b/backend/package.json
@@ -20,9 +20,12 @@
     "@types/xml2js": "^0.4.14",
     "axios": "^1.8.4",
     "cors": "^2.8.5",
-    "dotenv": "^16.3.1",
+    "dotenv": "^16.5.0",
     "express": "^4.18.2",
+    "express-session": "^1.18.1",
     "mqtt": "^5.11.0",
+    "passport": "^0.7.0",
+    "passport-openidconnect": "^0.1.2",
     "soap": "^1.1.10",
     "socket.io": "^4.8.1",
     "xml2js": "^0.6.2"
@@ -30,8 +33,11 @@
   "devDependencies": {
     "@types/cors": "^2.8.17",
     "@types/express": "^4.17.21",
+    "@types/express-session": "^1.18.1",
     "@types/js-yaml": "^4.0.9",
     "@types/node": "^20.11.19",
+    "@types/passport": "^1.0.17",
+    "@types/passport-openidconnect": "^0.1.3",
     "js-yaml": "^4.1.0",
     "nodemon": "^3.0.3",
     "ts-node": "^10.9.2",
