--- a/.env.template
+++ b/.env.template
@@ -28,9 +28,9 @@ NRE_API_TOKEN=your_nre_api_token_here
 # MQTT CONFIGURATION
 # =============================================================================
 # URL of the MQTT broker for the physical display
-MQTT_BROKER_URL=mqtt://your_broker_address:1883
+MQTT_BROKER_URL=ws://homeassistant.local:1884
 
-# Topic to publish display commands to
+# Topic to publish display commands to (this is not the HA discovery MQTT but just used internally)
 MQTT_PUBLISH_TOPIC=splitflap/display
 
 # Topic to subscribe for status updates
@@ -50,6 +50,3 @@ MQTT_PASSWORD=your_mqtt_password
 # For local development: http://localhost:3001
 # When using Docker: http://backend:3000
 VITE_API_BASE_URL=http://localhost:3001
-
-# Must match SPLITFLAP_DISPLAY_LENGTH above
-VITE_SPLITFLAP_DISPLAY_LENGTH=12
