--- a/backend/.env.template
+++ b/backend/.env.template
@@ -5,7 +5,7 @@
 # Backend server port
 PORT=3001
 # Node environment (development, production, etc.)
-NODE_ENV=development
+NODE_ENV=production
 
 # --- External Service Credentials ---
 # National Rail Enquiries LDBWS Access Token (if using Train mode)
