--- a/.env.template
+++ b/.env.template
@@ -28,17 +28,10 @@ NRE_API_TOKEN=your_nre_api_token_here
 # MQTT CONFIGURATION
 # =============================================================================
 # URL of the MQTT broker for the physical display
-MQTT_BROKER_URL=ws://homeassistant.local:1884
-
-# Topic to publish display commands to (this is not the HA discovery MQTT but just used internally)
-MQTT_PUBLISH_TOPIC=splitflap/display
-
-# Topic to subscribe for status updates
-MQTT_SUBSCRIBE_TOPIC=splitflap/status
-
-# Optional MQTT credentials
-MQTT_USERNAME=your_mqtt_username
-MQTT_PASSWORD=your_mqtt_password
+DISPLAY_MQTT_BROKER_URL=ws://homeassistant.local:1884
+DISPLAY_MQTT_TOPIC=homeassistant/text/splitflap/state
+DISPLAY_MQTT_USERNAME=mqtt_username
+DISPLAY_MQTT_PASSWORD=mqtt_password
 
 # =============================================================================
 # FRONTEND CONFIGURATION
