--- a/.env.template
+++ b/.env.template
@@ -32,6 +32,8 @@ DISPLAY_MQTT_BROKER_URL=ws://homeassistant.local:1884
 DISPLAY_MQTT_TOPIC=homeassistant/text/splitflap/state
 DISPLAY_MQTT_USERNAME=mqtt_username
 DISPLAY_MQTT_PASSWORD=mqtt_password
+# Optional: Calibration string - comma-separated offsets for each character position
+# CALIBRATION_STRING=0,0,0,0,0,0,0,0,0,0,0,0
 
 # =============================================================================
 # SPLITFLAP CALIBRATION
